fix spurious scrollbar on table-wrap by removing table margin-bottom

--- a/node/api/public/admin/style.css
+++ b/node/api/public/admin/style.css
@@ -183,6 +183,10 @@ tr.unread {
     -webkit-overflow-scrolling: touch;
 }
 
+.table-wrap table {
+    margin-bottom: 0;
+}
+
 .icon-cell {
     width: 1.5em;
     text-align: center;
